2005-02-23  Cedric Gustin  <cedric.gustin@swing.be>

	* gobject/pygtype.c (add_property_docs): Use G_CONST_RETURN with a
	gchar* return value.

2005-02-23  Cedric Gustin  <cedric.gustin@swing.be>

	* gobject/pygtype.c (add_property_docs): Do not use
	g_string_append_printf with a NULL argument, as it crashes on
	win32. Fixes bug #166546.
	
2005-01-18  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/gtkmodule.c (init_gtk): On Python >= 2.4, don't call
	setlocale(LC_NUMERIC, "C"), as it breaks the locale module.  Fixes
	#164451.

2005-01-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygtype.c (pyg_value_from_pyobject): Be consistent about
	not raising an exception on error return.
	Patch by jylefort@brutele.be, fixes #160595.

2004-12-10  John Ehresman  <jpe@wingide.com>

	* gobject/pygobject.h: Change PY_HEXVERSION to PY_VERSION_HEX

2004-11-15  John Finlay  <finlay@moeraki.com>

	* gobject/pygflags.c (pyg_flags_repr): Print long int value if enum
	string not found. Fixes #158417. (modifed patch from Tim Evans)

2004-11-07  John Finlay  <finlay@moeraki.com>

	* gtk/gdk.override (_wrap_gdk_event_tp_setattr) Fix #157571 with
	slightly modified patch from rubensr.

2004-11-04  Johan Dahlin  <johan@gnome.org>
	
	* configure.in: post release version bump

=== PyGTK 2.4.1 ===
2004-11-04  Johan Dahlin  <johan@gnome.org>

	* gtk/gtk.override (_wrap_gtk_dialog_add_buttons): Use
	PyTuple_GetSlice and PyArg_ParseTuple here, so we can get the same
	behavior as in add_button. Reported by Maciej Katafiasz, fixes #156707

	* tests/test_dialog.py: Add test for it

	* examples/gtk/filechooser.py: Fix typo

	* examples/gtk/uimanager.py: Simplify

	* tests/Makefile.am:
	* tests/gtype.py:
	* tests/test-thread.c:
	* tests/test-thread.h:
	* tests/test-unknown.c:
	* tests/test-unknown.h:
	* tests/test_unknown.py:
	* tests/testhelpermodule.c:

	Add tests for dynamic/unknown objects and interfaces.
	
2004-10-28  John Finlay  <finlay@moeraki.com>
